# Gfx

./: CMakeLists.txt  README.md  Shizuku.h  game_config.cpp  game_config.h  gfx.cpp  gfx.h  shizuku.cpp
.github/workflows/: Build.yml
data/: config.txt
